depure las funciones de ambos archivos js, se redujo muchisimo la cantidad de lineas de codigo, faltaria comentar el codigo y tratar de implemetar mas notacion avanzada

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <img class="logo" src="./Assets/Captura de pantalla 2022-09-29 201215_preview_rev_1.png" alt="logo">
       </a>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="nav justify-content-end ">
-          <li class="nav-item">
+        <ul class="nav justify-content-end UlNav">
+          <li class="nav-item colorLiNav">
             <a class="nav-link colorA" href="./index.html">inicio</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item colorLiNav">
             <a class="nav-link colorA" href="./pages/carrito.html" id="enlaceCarrito">Carrito</a>
           </li>
         </ul>
