--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -2,63 +2,65 @@
 <html lang="en">
 
 <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-      <link rel="stylesheet" href="../node_modules/toastify-js/src/toastify.css">
-      <link rel="stylesheet" href="../node_modules/sweetalert2/dist/sweetalert2.min.css">
-      <link rel="stylesheet" href="../style/style.css">
-      <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="../node_modules/toastify-js/src/toastify.css">
+  <link rel="stylesheet" href="../node_modules/sweetalert2/dist/sweetalert2.min.css">
+  <link rel="stylesheet" href="../style/style.css">
+  <title>Document</title>
 </head>
 
 <body>
-      <nav class="navbar navbar-expand-lg colorNav">
-            <div class="container-fluid">
-                  <a class="navbar-brand titulo_logo" href="../index.html">
-                        <h2>
-                              Loan art
-                        </h2>
-                        <img class="logo" src="../Assets/Captura de pantalla 2022-09-29 201215_preview_rev_1.png"
-                              alt="logo">
-                  </a>
-                  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                        <ul class="nav justify-content-end ">
-                              <li class="nav-item">
-                                    <a class="nav-link colorA" href="../index.html">inicio</a>
-                              </li>
-                              <li class="nav-item">
-                                    <a class="nav-link colorA" href="./carrito.html">Carrito</a>
-                              </li>
-                        </ul>
-                  </div>
-            </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg colorNav">
+    <div class="container-fluid">
+      <a class="navbar-brand titulo_logo" href="../index.html">
+        <h2>
+          Loan art
+        </h2>
+        <img class="logo" src="../Assets/Captura de pantalla 2022-09-29 201215_preview_rev_1.png" alt="logo">
+      </a>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="nav justify-content-end UlNav">
+          <li class="nav-item colorLiNav">
+            <a class="nav-link colorA " href="../index.html">inicio</a>
+          </li>
+          <li class="nav-item colorLiNav">
+            <a class="nav-link colorA " href="./carrito.html">Carrito</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-      <main id="mainCarrito" class="mainCarrito">
+  <main id="mainCarrito">
+    <section id="sectionCarrito" class="sectionCarrito">
+      <ul class="list-group list-group-flush ulCarrito" id="ul">
 
-      </main>
+      </ul>
+    </section>
+  </main>
 
-      <footer class="footer">
-            <div class="footer-section">
-                  <h5>2022, Loan arts ©</h5>
-            </div>
-            <div class="footer-section">
-                  <a href="https://www.instagram.com/loan_art00/">
-                        <img src="../Assets/instagram icono.png" alt="Instagram">
-                  </a>
-                  <a href="https://www.facebook.com/loan.arts.90">
-                        <img src="../Assets/png-transparent-facebook-computer-icons-layout-rectangle-logo-brand.png"
-                              alt="Facebook">
-                  </a>
-            </div>
-      </footer>
+  <footer class="footer">
+    <div class="footer-section">
+      <h5>2022, Loan arts ©</h5>
+    </div>
+    <div class="footer-section">
+      <a href="https://www.instagram.com/loan_art00/">
+        <img src="../Assets/instagram icono.png" alt="Instagram">
+      </a>
+      <a href="https://www.facebook.com/loan.arts.90">
+        <img src="../Assets/png-transparent-facebook-computer-icons-layout-rectangle-logo-brand.png" alt="Facebook">
+      </a>
+    </div>
+  </footer>
 
 
-      <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
-      <script src="../node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
-      <script src="../node_modules/toastify-js/src/toastify.js"></script>
-      <script src="../js/carrito.js"></script>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="../node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
+  <script src="../node_modules/toastify-js/src/toastify.js"></script>
+  <script src="../js/carrito.js"></script>
 </body>
 
 </html>
