--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../node_modules/toastify-js/src/toastify.css">
   <link rel="stylesheet" href="../node_modules/sweetalert2/dist/sweetalert2.min.css">
   <link rel="stylesheet" href="../style/style.css">
-  <title>Document</title>
+  <title>Carrito</title>
 </head>
 
 <body>
