--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -23,10 +23,10 @@
       </a>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="nav justify-content-end UlNav">
-          <li class="nav-item colorLiNav">
+          <li class="nav-item">
             <a class="nav-link colorA " href="../index.html">inicio</a>
           </li>
-          <li class="nav-item colorLiNav">
+          <li class="nav-item">
             <a class="nav-link colorA " href="./carrito.html">Carrito</a>
           </li>
         </ul>
