depure las funcion de render total

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="nav justify-content-end UlNav">
           <li class="nav-item boton-pointer" id="btnCarrito">
-            <a class="btn button-24" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" >Carrito</a>
+            <button class="btn button-24" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Carrito</button>
           </li>
-          <!-- <button class="button-24 btn" role="button">Button 24</button> -->
         </ul>
       </div>
     </div>
@@ -40,6 +39,7 @@
 
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="offcanvasRightLabel">Carrito de Compras</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
 
       <div class="offcanvas-body">
