la pagina tiene todas las funcionalidades

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
   <nav class="navbar fixed-top navbar-expand-lg colorNav">
     <div class="container-fluid">
       <a class="navbar-brand titulo_logo" href="./index.html">
-        <h2>
-          Loan art
-        </h2>
-        <img class="logo" src="./Assets/Captura de pantalla 2022-09-29 201215_preview_rev_1.png" alt="logo">
+        <img class="logo" src="./Assets/Captura_de_pantalla_2023-06-15_223030-removebg-preview.png" alt="logo">
       </a>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="nav justify-content-end UlNav">
@@ -45,6 +42,7 @@
       <div class="offcanvas-body">
         <div>
           <ul class="list-group list-group-flush" id="canvasCarrito">
+
           </ul>
         </div>
       </div>
