--- a/index.html
+++ b/index.html
@@ -28,28 +28,24 @@
   </nav>
   
   <main class="content container" id="mainCatalogo">
+    <!-- catalogo  -->
     <section class="section row row-cols-4 justify-content-center" id="sectionInicio">
     </section>
-    
     <!-- canvas-->
     <section class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-
+      <!-- header -->
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="offcanvasRightLabel">Carrito de Compras</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
-
+      <!-- body -->
       <div class="offcanvas-body">
         <div>
           <ul class="list-group list-group-flush" id="canvasCarrito">
-
           </ul>
         </div>
       </div>
-
     </section>
-
-
   </main>
 
   <footer class="footer">
